# editor

./: .travis.yml  CMakeLists.txt  annotated.html  classapplication__controller-members.html  classapplication__controller.html  classcircle-members.html  classcircle.html  classcircle__coll__graph.map  classcircle__inherit__graph.md5  classdocument-members.html  classdocument.html  classdocuments__manager-members.html  classdocuments__manager.html  classes.html  classformatter-members.html  classformatter.html  classformatter__creator-members.html  classformatter__creator.html  classformatter__creator__inherit__graph.map  classformatter__creator__inherit__graph.md5  classformatter__inherit__graph.map  classformatter__inherit__graph.md5  classgraphics__editor-members.html  classgraphics__editor.html  classjson__formatter-members.html  classjson__formatter.html  classjson__formatter__coll__graph.map  classjson__formatter__coll__graph.md5  classjson__formatter__creator-members.html  classjson__formatter__creator.html  classjson__formatter__creator__coll__graph.map  classjson__formatter__creator__coll__graph.md5  classlineseg-members.html  classlineseg.html  classlineseg__inherit__graph.map  classlineseg__inherit__graph.md5  classshape-members.html  classshape.html  classshape__inherit__graph.map  classshape__inherit__graph.md5  (+73 more)
docs/: doxyfile.in
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  related_0.js  related_1.js  related_2.js  related_3.js  (+5 more)
sources/: main.cpp
tests/: editor_gtest.cpp
(+4 files in other folders)
